@@ -6,11 +6,12 @@ import org.jetbrains.annotations.Nullable;
 import org.jetbrains.annotations.Range;
 import org.json.JSONObject;
 
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.text.ParseException;
 import java.text.SimpleDateFormat;
-import java.util.Date;
+import java.util.*;
+
 
 @Log
 public class MeinWGZimmerInsertion extends Insertion {
@@ -24,12 +25,21 @@ public class MeinWGZimmerInsertion extends Insertion {
     }
 
     @Override
-    protected @NotNull URL setInsertionURL() throws IllegalStateException {
+    protected @NotNull URI setInsertionURI() throws IllegalStateException {
         try {
-            return new URL(PROTOCOL + DOMAIN + "/zimmer/" + super.getJsonObject().get("RoomNr"));
-        } catch (NullPointerException | MalformedURLException e) {
+            return new URI(PROTOCOL + DOMAIN + "/zimmer/" + super.getJsonObject().get("RoomNr"));
+        } catch (NullPointerException | URISyntaxException e) {
             throw new IllegalStateException("URI to insertion could not be parsed.\n\n" + e.getMessage());
         }
+    }
+
+    @Override
+    protected SortedMap<String, Optional<String>> setProperties() {
+        SortedMap<String, Optional<String>> map = new TreeMap<>();
+        map.put("Rent", Optional.of(String.valueOf(setRent())));
+        map.put("Move-in Date", Optional.of(new SimpleDateFormat("dd.MM.yyyy").format(setMoveInDate())));
+        map.put("Next Tenant Wanted", Optional.of(setIsNewTenantWanted() ? "Yes" : "No"));
+        return map;
     }
 
     @Override
